@@ -1,3 +1,6 @@
+Version 2009040901
+- Force DATA encoding to be iso-8859-1 (davidhull)
+----
 Version 2009040801
 - Moved to git and github.
 - Modernized distro.
